# swarm

./: .gitignore  README.md  compile.bat  compile.sh  compile_exe.bat  config.json  config.py  main.py  main.pyw  polls.py  prep.py  pyproject.toml  requirements.txt
.github/workflows/: build-release.yml
components/: __init__.py  founding.py  misc.py  polls.py  prep.py  tagging.py
src/: main.py
src/components/: __init__.py  crash_reporter.py  founding.py  misc.py  polls.py  prep.py  swarm_icon.py  tagging.py
