[tool.poetry]
name = "swarm"
version = "1.2.0"
description = "puppet manager for nationstates"
authors = ["sweeze <sw33ze@protonmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
PySimpleGUI = "^4.59.0"
requests = "^2.27.1"
bs4 = "^0.0.1"
tendo = "^0.2.15"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
pyinstaller = "^5.0.1"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
